--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+## default connection pool
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
 
+
+##Postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/novenovemilhas
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create
